force-app/main/default/objects/Contact/fields/Alumni_Profile__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alumni Profile</label>
    <referenceTo>Alumni_Profile__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>