force-app/main/default/objects/Contact/fields/Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for Contact to receive Email.</description>
    <inlineHelpText>Contact will be included in the marketing team’s email outreach.</inlineHelpText>
    <label>Email Opt In</label>
    <type>Checkbox</type>
</CustomField>