force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set a contact to &quot;Inactive&quot; when an individual is no longer with the account they are associated with.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>