force-app/main/default/objects/Contact/fields/Relationship_to_Alumni__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Alumni__c</fullName>
    <label>Relationship to Alumni</label>
    <length>255</length>
    <type>Text</type>
</CustomField>